noinst_LIBRARIES = libtypeset.a

EXTRA_DIST = \
        fontparse.l fontparse.y 

libtypeset_a_SOURCES = \
        fontparse.cpp fontyacc.c fontdata.cpp fontlex.c \
        openglfont.cpp typeset.cpp typesetbox.cpp

noinst_HEADERS = \
        fontdata.h liststack.h openglfont.h typeset.h typesetbox.h  \
        fontparse.h fontyacc.h  
